--- a/front.html
+++ b/front.html
@@ -45,8 +45,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             
-            <li><a class="dropdown-item" href="nav2.html">drop1</a></li><hr>
-            <li><a class="dropdown-item" href="nav2.html">drop2</a></li>
+            <li><a class="dropdown-item" href="nav2.html">dropdown1</a></li><hr>
+            <li><a class="dropdown-item" href="nav2.html">dropdown2</a></li>
             
           </ul>
         </li>
