--- a/front.html
+++ b/front.html
@@ -17,8 +17,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container">
     
-    <img src="" width="40px">
-    <a class="navbar-brand" href="#">LOGO</a>
+    <img src="cashimage1.png" width="70px">
+    <!-- <a class="navbar-brand" href="#">LOGO</a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,10 +53,10 @@
 
 
       <li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">  choice </a>
+			<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">  Settings </a>
 		    <ul class="dropdown-menu fade-up">
-			  <li><a class="dropdown-item" href="#"> Item1</a></li><hr>
-			  <li><a class="dropdown-item" href="#"> Item2</a></li>
+			  <li><a class="dropdown-item" href="#">Account Settings</a></li>
+			  <li><a class="dropdown-item" href="#">Help and Support</a></li>
 			  
 		    </ul>
 		</li>
@@ -70,7 +70,7 @@
     <section id="hero" class="d-flex align-items-center" >
         <div class="container "  >
             <!-- <h1>Say Goodbye to <br>Guesswork!</h1> -->
-            <h1>Eve₹ything Got<br> Way $impler.</h1>
+            <h1 class="heading">Eve₹ything Got<br> Way $impler.</h1>
             <h2>Let's build a brighter financial future together...</h2>
             <!-- <a href="#" class="btn_get_started ">GET STARTED</a> -->
             <a href="#"><span>GET STARTED</span></a>
