--- a/front.html
+++ b/front.html
@@ -79,7 +79,7 @@
         
 
     </section>
-
+<!-- 
     <div class="container mt-5">
   <div class="row">
     <div class="col-md-4">
@@ -129,7 +129,21 @@
       </div>
     </div>
   </div>
+</div> -->
+
+
+<!--contact part-->
+<div class="section">
+  <div class="container">
+    <div class="row full-height justify-content-center">
+      <div class="col-12 text-center align-self-center py-5">
+        <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+        <div class="section pb-5 pt-5 pt-sm-2 text-center"></div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 <!--footer-part-->
 <footer class="bg-dark text-white pt-5 pb-4">
