--- a/front.html
+++ b/front.html
@@ -196,7 +196,7 @@
   <div class="container text-center text-md-left">
     <div class="row text-center text-md-left">
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto">
-        <h5 class="text-uppercase mb-4 font-weight-bold text-warning"> <img src="cashimage1.png" width="70px"></h5>
+        <h5 class="text-uppercase mb-4 font-weight-bold text-warning">LOGO <img src="cashimage1.png" width="70px"></h5>
         <p>we are dedicated to empowering individuals to take control of their financial futures. Our mission is to provide personalized financial guidance, education, and solutions that help you achieve your goals and navigate life's financial complexities with confidence.</p>
       </div>
       
