--- a/login.html
+++ b/login.html
@@ -11,8 +11,18 @@
 </head>
 <body>
     <!--contact part-->
+	<form>
+	
 <div class="section">
-		<div class="container">
+		 <div class="background">
+       <div class="cube"></div>
+       <div class="cube"></div>
+       <div class="cube"></div>
+       <div class="cube"></div>
+      <div class="cube"></div>
+		
+	 
+	  <div class="container">
 			<div class="row full-height justify-content-center">
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
@@ -27,11 +37,11 @@
 											<h4 class="inside mb-4 pb-3">Log In</h4>
 											<div class="form-group">
                         
-												<input type="email" name="logemail" class="form-style" placeholder="Your Email"  id="logemail" autocomplete="off" >
+												<input type="email" name="logemail" class="form-style" placeholder="Your Email*"   id="logemail" autocomplete="off" >
 												<i class="input-icon fa fa-envelope-o"></i>
 											</div>	
 											<div class="form-group mt-2">
-												<input type="password" name="logpass" class="form-style" placeholder="Your Password"  id="logpass" autocomplete="off">
+												<input type="password" name="logpass" class="form-style" placeholder="Your Password*"  id="logpass" autocomplete="off">
 												<i class="input-icon fa fa-lock"></i>
 											</div>
 											<a href="budget.html" class="btn mt-4">submit</a>
@@ -44,15 +54,15 @@
 										<div class="section text-center">
 											<h4 class="inside mb-4 pb-3 ">Sign Up</h4>
 											<div class="form-group">
-												<input type="text" name="logname" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
+												<input type="text" name="logname" class="form-style" placeholder="Your Full Name*" id="logname" autocomplete="off" >
 												<i class="input-icon fa fa-user-circle"></i>
 											</div>	
 											<div class="form-group mt-2">
-												<input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
+												<input type="email" name="logemail" class="form-style" placeholder="Your Email*" id="logemail" autocomplete="off" >
 												<i class="input-icon fa fa-envelope-o"></i>
 											</div>	
 											<div class="form-group mt-2">
-												<input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+												<input type="password" name="logpass" class="form-style" placeholder="Your Password*" id="logpass" autocomplete="off" >
 												<i class="input-icon fa fa-lock"></i>
 											</div>
 											<a href="budget.html" class="btn mt-4">submit</a>
@@ -66,7 +76,8 @@
 	      	</div>
 	    </div>
 	</div>
-
+	</div>
+</form>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     
 
