--- a/login.html
+++ b/login.html
@@ -23,6 +23,8 @@
 		
 	 
 	  <div class="container">
+	<img src="cashimage1.png" width="70px">
+  
 			<div class="row full-height justify-content-center">
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
@@ -75,6 +77,7 @@
 		      	</div>
 	      	</div>
 	    </div>
+	</div>
 	</div>
 	</div>
 </form>
