--- a/get_started.html
+++ b/get_started.html
@@ -12,14 +12,35 @@
     <title>Get started</title>
 </head>
 <body>
-     <section id="hero" class="d-flex align-items-center" >
+     <!-- <section id="hero" class="d-flex align-items-center" >
         <div class="container"  > 
             <h1 class="heading">Eve₹ything Got<br> Way $impler.</h1>
             <h2>Let's build a brighter financial future together...</h2>  
             <a href="login.html"><span>GET STARTED</span></a>
         </div>
        
-    </section>
+    </section> -->
+
+    <section id="hero" class="d-flex align-items-center">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <h1 >Eve₹ything Got<br> Way $impler.</h1>
+          <h2>Let's build a brighter financial future together...</h2>
+          <div class="d-flex justify-content-center justify-content-lg-start">
+            <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
+            <a href="login.html"><span>GET STARTED</span></a>
+            
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+          <img src="cashimage1.png" class="img-fluid animated" alt="">
+        </div>
+      </div>
+    </div>
+
+  </section>
 </body>
 </html>
 
