--- a/get_started.html
+++ b/get_started.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="cashimage1.png" class="img-fluid animated" alt="">
+          <img src="purple-image.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
