--- a/get_started.html
+++ b/get_started.html
@@ -23,6 +23,7 @@
   <body>
     <section id="hero" class="d-flex align-items-center">
       <div class="container">
+        <img src="wealthwise_logo.png" width="90px" />
         <div class="row">
           <div
             class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
