--- a/login.html
+++ b/login.html
@@ -29,8 +29,9 @@
         <div class="cube"></div>
         <div class="cube"></div>
         <div class="cube"></div>
-<img src="wealthwise_logo.png" width="90px" />
+
         <div class="container" >
+        
           <div class="row full-height justify-content-center">
             <div class="col-12 text-center align-self-center py-5">
               <div class="section pb-5 pt-5 pt-sm-2 text-center">
@@ -142,8 +143,8 @@
                                 </div>
 
                                 <button type="submit" class="btn mt-4">
-                                  <!-- <a href="budget.html" class="link">Submit</a> -->
-                                  Submit
+                                  <a href="budget.html" class="link">Submit</a>
+                                  <!-- Submit -->
                                 </button>
                               </form>
                             </div>
