--- a/get_started.html
+++ b/get_started.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <section id="hero" class="d-flex align-items-center">
-      <div class="container">
+      <div class="container pt-5 ">
         <img src="wealthwise_logo.png" width="90px" />
         <div class="row">
           <div
