--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                 <div class="card-3d-wrap mx-auto">
                   <div class="card-3d-wrapper">
                     <div class="card-front">
-                      <div class="center-wrap">
+                      <div class="center-wrap-front">
                         <div class="section text-center">
                           <h4 class="inside mb-4 pb-3">Log In</h4>
                           <form id="loginForm" class="form-section">
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="card-back">
-                      <div class="center-wrap">
+                      <div class="center-wrap ">
                         <div class="section text-center" >
                           <div class="card-3d-wrap signup">
                             <div class="card-3d-wrapper signup">
