--- a/login.html
+++ b/login.html
@@ -237,11 +237,11 @@
             password
           );
           console.log(userCredential.user.uid);
-          alert("login successfull!");
+          // alert("login successfull!");
           window.location.href = "budget.html";
         } catch (error) {
           console.error(error);
-          alert("Error login. Check the console for details.");
+          // alert("Error login. Check the console for details.");
         } finally {
           submitButton.disabled = false; // Re-enable the button after login attempt
         }
