--- a/login.html
+++ b/login.html
@@ -21,9 +21,7 @@
     <title>contact-form</title>
   </head>
   <body>
-   
-
-   <!--contact part-->
+    <!--contact part-->
     <div class="section">
       <div class="background" style="height: auto">
         <div class="cube"></div>
@@ -95,13 +93,13 @@
                     </div>
 
                     <div class="card-back">
-                      <div class="center-wrap ">
-                        <div class="section text-center" >
+                      <div class="center-wrap">
+                        <div class="section text-center">
                           <div class="card-3d-wrap signup">
                             <div class="card-3d-wrapper signup">
                               <h4 class="inside mb-4 pb-3">Sign Up</h4>
                               <form id="signupForm" class="form-section">
-                                <div class="form-group" >
+                                <div class="form-group">
                                   <input
                                     type="text"
                                     name="signupname"
@@ -166,7 +164,6 @@
   </body>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  
 
   <script type="module">
     // Import the functions you need from the SDKs you need
@@ -176,6 +173,12 @@
       createUserWithEmailAndPassword,
       signInWithEmailAndPassword,
     } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-auth.js";
+
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+    } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-firestore.js";
 
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
@@ -192,6 +195,8 @@
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app); // Initialize Firestore
+
     async function initApp() {
       // Add this script after initializing Firebase
       const signupForm = document.getElementById("signupForm");
@@ -209,7 +214,14 @@
             password
           );
           console.log(userCredential.user.uid);
-          alert("sign up successfull!");
+
+          console.log("sign up successfull!");
+
+          return app
+            .firestore()
+            .collection("users")
+            .doc(user.uid)
+            .set(userData);
         } catch (error) {
           console.error(error);
           alert("Error sign up. Check the console for details.");
@@ -218,7 +230,6 @@
 
       const loginForm = document.getElementById("loginForm");
 
-   
       loginForm.addEventListener("submit", async (event) => {
         event.preventDefault();
 
