--- a/login.html
+++ b/login.html
@@ -164,6 +164,8 @@
   </body>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore-compat.js"></script>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
@@ -205,9 +207,12 @@
         event.preventDefault();
         const email = document.getElementById("signupemail").value;
         const password = document.getElementById("signuppass").value;
+        const name = document.getElementById("signupname").value;
+        const phoneNumber = document.getElementById("signupphone").value;
 
         try {
           const auth = getAuth();
+          console.log(auth);
           const userCredential = await createUserWithEmailAndPassword(
             auth,
             email,
@@ -215,15 +220,16 @@
           );
           console.log(userCredential.user.uid);
 
+          const docRef = await addDoc(collection(db, "users"), {
+            userId: userCredential.user.uid,
+            name: name,
+            phoneNumber,
+            email,
+          });
+          console.log("Document written with ID: ", docRef.id);
           console.log("sign up successfull!");
-
-          return app
-            .firestore()
-            .collection("users")
-            .doc(user.uid)
-            .set(userData);
         } catch (error) {
-          console.error(error);
+          console.log(error);
           alert("Error sign up. Check the console for details.");
         }
       });
@@ -252,7 +258,7 @@
           // alert("login successfull!");
           window.location.href = "budget.html";
         } catch (error) {
-          console.error(error);
+          console.log(error);
           alert("Error login.");
         } finally {
           submitButton.disabled = false; // Re-enable the button after login attempt
